<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/author">

        <android.support.v7.preference.Preference
            android:title="@string/xt"
            android:key="xt"
            android:summary="@string/xt_college"/>

        <android.support.v7.preference.Preference
            android:title="@string/fy"
            android:key="fy"
            android:summary="@string/fy_college"/>

        <android.support.v7.preference.Preference
            android:title="@string/nq"
            android:key="nq"
            android:summary="@string/nq_college"/>

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>