<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_news"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@mipmap/ic_menu_movie"
            android:title="@string/nav_bookmarks" />
    </group>

    <item android:id="@+id/nav_settings"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/night_theme"
                android:title="@string/change_theme"
                android:icon="@mipmap/history"/>
            <item
                android:id="@+id/suggest"
                android:title="@string/settings"
                android:icon="@mipmap/suggest"/>
            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@mipmap/about"/>
        </menu>
    </item>

</menu>